# ai-task-scheduler

./: .env.example  CLAUDE.md  docker-compose.yml
api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
api/alembic/: README  env.py
api/alembic/versions/: 699d11d39f42_remove_actual_hours_column_from_tasks_.py  a08e42e1b033_add_description_field_to_tasks.py  a1b2c3d4e5f6_fix_foreign_key_cascade_constraints.py  b2c3d4e5f6g7_add_updated_at_triggers.py  ba17f3defae0_add_task_dependencies_table.py  c000a2c4a88e_add_status_column_to_schedules.py  ce5485372f5b_initial_migration_with_all_models.py  d1e2f3a4b5c6_auto_compute_decomposition_level.py  df059711987d_make_description_required.py  e2f3g4h5i6j7_fix_parent_task_id_on_delete_set_null.py  ff17a2be5f97_make_project_description_required.py
api/app/: config.py  database.py  dependencies.py  exceptions.py  main.py  models.py  scheduler.py
api/app/clients/: __init__.py  claude_client.py
api/app/mcp/: __init__.py  mcp_server.py  server.py  tools.py
api/app/routers/: dashboard.py  genres.py  health.py  mcp.py  projects.py  schedules.py  settings.py  task_dependencies.py  tasks.py  time_entries.py
api/app/schemas/: common.py  dashboard.py  responses.py  workflow_requests.py  (+1 more)
api/tests/: conftest.py  factories.py  test_dashboard.py  test_genres.py  test_health.py  test_projects.py  test_schedules.py  test_settings.py  test_task_dependencies.py  test_tasks.py  test_time_entries.py  test_workflow_schedule.py  test_workflow_tasks.py  test_workflow_timer.py  utils.py
(+58 files in other folders)
